# mediaflow

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
mediaflow/: __init__.py  app.py  callback_types.py  cli.py  compat.py  config.py  diagnostics.py  integrations.py  main_window.py  mediashrink_adapter.py  pipeline.py  plexify_adapter.py  progress.py  settings.py  workers.py  workflow.py
tests/: test_cli.py  test_compat.py  test_config.py  test_dependency_contracts.py  test_diagnostics.py  test_formatting.py  test_integrations.py  test_main_window.py  test_mediashrink_adapter.py  test_plexify_adapter.py  test_progress.py  test_settings.py  test_workers.py  test_workflow.py
