[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediaflow"
version = "0.1.0"
description = "Practical desktop GUI for running plexify and mediashrink as one workflow."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7,<7",
  "plexify",
  "mediashrink",
  "typer==0.12.3",
]

[project.scripts]
mediaflow = "mediaflow.cli:app"

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
]

[tool.setuptools.packages.find]
include = ["mediaflow*"]
